--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-qr-code:
-  qrCodeRepository: E://qr-code-repos
-  logoRepository: E://qr-code-repos/logo
-
 spring:
-  mvc:
-    static-path-pattern: /**
-  resources:
-    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${qr-code.qrCodeRepository}/
+  profiles:
+    active: dev
