--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>postcard</name>
+	<name>card</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -97,18 +97,18 @@
 			</plugin>
 		</plugins>
 	</build>
-<!--
-    <distributionManagement>
-        <repository>
-            <id>nexus</id>
-            <name>Releases</name>
-            <url>http://localhost:8081/repository/maven-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus</id>
-            <name>Snapshot</name>
-            <url>http://localhost:8081/repository/maven-snapshots</url>
-        </snapshotRepository>
+
+   <!--<distributionManagement>
+	<repository>
+		<id>Nexus-Releases</id>
+		<name>Releases</name>
+		<url>http://bql.mynatapp.cc/repository/maven-releases</url>
+	</repository>
+	<snapshotRepository>
+		<id>Nexus-Snapshot</id>
+		<name>Snapshot</name>
+		<url>http://bql.mynatapp.cc/repository/maven-snapshots</url>
+	</snapshotRepository>
     </distributionManagement>-->
 
 </project>
